[package]
name = "ws2pg"
version = "0.1.0"
authors = ["Shelvacu <shelvacu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
rmp = "0.8.9"
rmp-serde = "0.14.3"
serde_derive = "*"
serde = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.10.1"
futures = "0.3"
anyhow = "1.0"
serde_json = "*"
